Home Page Finish

--- a/home.html
+++ b/home.html
@@ -11,15 +11,40 @@
 
 <body>
     <header>
-        <nav>
-            <a href="./home..html">Página Inicial |</a>
-            <a href="./regras.html">Regras</a>
-        </nav>
+        <img src="./assets/images/image_tag_header.jpg" class="tag_header" />
+        <h1 class="title_header">Ironhack Dice Games</h1>
     </header>
     <main>
+        <div>
+            <a href="./rules.html" id="rulesPosition">Rules</a>
+        </div>
+        <!-- <img src="./assets/images/image_tag_score.jpg" class="tag_score" /> -->
+
+        <div class="textScore">Score</div>
+        <div class="textPlayer1">Player 1:</div>
+        <div class="textPlayer2">Player 2:</div>
+        <div class="textPlayerRound">Round</div>
+        <div class="textPlayerRoundResult">Player X</div>
+
+        <!-- <img src="./assets/images/image_tag_player.jpg " class="tag_player" /> -->
+
+        <img src="./assets/images/image_given_one.jpg" class="diceFirstPosition" />
+        <img src="./assets/images/image_given_two.jpg" class="diceSecondPosition" />
+        <img src="./assets/images/image_given_three.jpg" class="diceThirdPosition" />
+        <img src="./assets/images/image_given_four.jpg" class="diceFourthPosition" />
+        <img src="./assets/images/image_given_five.jpg" class="diceFifthPosition" />
+        <img src="./assets/images/image_given_six.jpg" class="diceSixthPosition" />
+
+        <button type="submit" class="buttonLefthPosition textButton">
+        Roll Dice
+      </button>
+        <button type="submit" class="buttonRightPosition textButton">Stop</button>
         <div class="dado"></div>
     </main>
-    <footer></footer>
+    <footer>
+        <img src="./assets/images/image_tag_footer.jpg" class="tag_footer" />
+        <h1 class="title_footer">© All Rights Reserved To Eliel Calore</h1>
+    </footer>
     <script src="./dado.js"></script>
 </body>
 
