--- a/home.html
+++ b/home.html
@@ -21,10 +21,19 @@
         <!-- <img src="./assets/images/image_tag_score.jpg" class="tag_score" /> -->
 
         <div class="textScore">Score</div>
-        <div class="textPlayer1">Player 1:</div>
-        <div class="textPlayer2">Player 2:</div>
+        <div class="textPlayer1">
+            Player 1:
+            <div class="score"></div>
+        </div>
+        <div class="textPlayer2">
+            Player 2:
+            <div class="score"></div>
+        </div>
+
         <div class="textPlayerRound">Round</div>
-        <div class="textPlayerRoundResult">Player X</div>
+        <div class="textPlayerRoundResult">
+            <div class="score">Player X</div>
+        </div>
 
         <!-- <img src="./assets/images/image_tag_player.jpg " class="tag_player" /> -->
         <div>
