--- a/home.html
+++ b/home.html
@@ -59,6 +59,7 @@
     </footer>
     <script src="./assets/scripts/dice.js"></script>
     <script src="./assets/scripts/index.js"></script>
+    <script src="./assets/sounds/"></script>
 </body>
 
 </html>
