--- a/home.html
+++ b/home.html
@@ -30,9 +30,11 @@
             <div class="score"></div>
         </div>
 
-        <div class="textPlayerRound">Round</div>
+        <div class="textPlayerRound">
+            <div id="player">Round:</div>
+        </div>
         <div class="textPlayerRoundResult">
-            <div class="score">Player X</div>
+            <div id="playerResult">Player X</div>
         </div>
 
         <!-- <img src="./assets/images/image_tag_player.jpg " class="tag_player" /> -->
@@ -59,7 +61,6 @@
     </footer>
     <script src="./assets/scripts/dice.js"></script>
     <script src="./assets/scripts/index.js"></script>
-    <script src="./assets/sounds/"></script>
 </body>
 
 </html>
