sound stop ok 14062022 19:26

--- a/home.html
+++ b/home.html
@@ -16,44 +16,37 @@
     </header>
     <main>
         <div>
-            <a href="./rules.html" class="rulesPosition">Rules</a>
+            <div><a href="./rules.html" class="rulesPosition">Rules</a></div>
+            <div class="textScore">Score</div>
+            <div class="textPlayer1">
+                P 0 :
+                <div class="score"></div>
+            </div>
+            <div class="textPlayer2">
+                P 1 :
+                <div class="score"></div>
+            </div>
+            <div class="textPlayerRound">
+                <div id="player">Round:</div>
+            </div>
+            <div class="textPlayerRoundResult">
+                <div id="playerResult">Player X</div>
+            </div>
+            <div>
+                <img src="./assets/images/image_given_one.jpg" id="diceFirstPosition" class="dice" />
+                <img src="./assets/images/image_given_two.jpg" id="diceSecondPosition" class="dice" />
+                <img src="./assets/images/image_given_three.jpg" id="diceThirdPosition" class="dice" />
+                <img src="./assets/images/image_given_four.jpg" id="diceFourthPosition" class="dice" />
+                <img src="./assets/images/image_given_five.jpg" id="diceFifthPosition" class="dice" />
+                <img src="./assets/images/image_given_six.jpg" id="diceSixthPosition" class="dice" />
+            </div>
+            <button type="submit" class="textButton" id="buttonLefthPosition">
+          Roll Dice
+        </button>
+            <button type="submit" class="textButton" id="buttonRightPosition">
+          Stop
+        </button>
         </div>
-        <!-- <img src="./assets/images/image_tag_score.jpg" class="tag_score" /> -->
-
-        <div class="textScore">Score</div>
-        <div class="textPlayer1">
-            P 0 :
-            <div class="score"></div>
-        </div>
-        <div class="textPlayer2">
-            P 1 :
-            <div class="score"></div>
-        </div>
-
-        <div class="textPlayerRound">
-            <div id="player">Round:</div>
-        </div>
-        <div class="textPlayerRoundResult">
-            <div id="playerResult">Player X</div>
-        </div>
-
-        <!-- <img src="./assets/images/image_tag_player.jpg " class="tag_player" /> -->
-        <div>
-            <img src="./assets/images/image_given_one.jpg" id="diceFirstPosition" class="dice" />
-            <img src="./assets/images/image_given_two.jpg" id="diceSecondPosition" class="dice" />
-            <img src="./assets/images/image_given_three.jpg" id="diceThirdPosition" class="dice" />
-            <img src="./assets/images/image_given_four.jpg" id="diceFourthPosition" class="dice" />
-            <img src="./assets/images/image_given_five.jpg" id="diceFifthPosition" class="dice" />
-            <img src="./assets/images/image_given_six.jpg" id="diceSixthPosition" class="dice" />
-        </div>
-
-        <button type="submit" class="textButton" id="buttonLefthPosition">
-        Roll Dice
-      </button>
-        <button type="submit" class="textButton" id="buttonRightPosition">
-        Stop
-      </button>
-        <div class="dado"></div>
     </main>
     <footer>
         <img src="./assets/images/image_tag_footer.jpg" class="tag_footer" />
