--- a/rules.html
+++ b/rules.html
@@ -11,93 +11,62 @@
 
 <body>
     <header>
-        <nav>
-            <a href="./home..html">Página Inicial |</a>
-            <a href="./regras.html">Regras</a>
-        </nav>
+        <img src="./assets/images/image_tag_header.jpg" class="tag_header" />
     </header>
     <menu>
+        <nav>
+            <a href="./home.html">Play</a>
+        </nav>
         <div>
-            <h1>Este é o Jogo de dados Ironhack!</h1>
             <ul>
-                <h3>Descrição:</h3>
-                <li>2 à 6 jogadores.</li>
+                <h3>Description:</h3>
+                <li>2 Players</li>
             </ul>
             <ul>
-                <h3>Peças</h3>
-                <li>6 dados de 6 faces.</li>
+                <h3>Parts</h3>
+                <li>6 6-sided dice</li>
             </ul>
             <ul>
-                <h3>Objetivo</h3>
+                <h3>Objective</h3>
                 <li>
-                    Um jogo consiste em uma quantidade ilimitada de rodadas onde cada jogador, em sua vez, terá uma chance ou mais de arremessar os dados, Na primeira, joga os seis dados, entre os 6 dados jogados se não cair nenhuma das sequências na qual possui pontuação
-                    você afunda na rodada, e passa sua vez, agora caso você tenha jogado e pontuado como por exemplo: 1-1-2-3-4-5 você têm a opção de parar por aqui e ficar com sua pontuação obtida atè o momento, ou continuar jogando. Segunda jogada,
-                    você jogara os dados restantes no qual não pontuaram, ou caso todos os dados tenham obtido pontuação, você poderá lançar todos os dados novamente, mas se os dados lançados não tiveram pontuação você perderá os pontos obtidos até o
-                    momento, e passa sua vez. Dessa forma você vai jogando sucessivamente as demais rodadas.
+                    A game consists of a limited number of rounds for each player, in turn, will have two chances to roll the dice, first, roll the six dice, and you have two options, stand and stay with the points we have achieved so far, and pass your turn, or, throw the
+                    dice again, remembering that on the second throw you get a lower score, that will be your score, and not the first pitch.
                 </li>
             </ul>
             <ul>
-                <h3>Pontuação</h3>
+                <h3>Punctuation</h3>
                 <h4>Face 1:</h4>
                 <ul>
-                    <li>100 pontos.</li>
+                    <li>100 points</li>
                 </ul>
                 <h4>Face 6:</h4>
                 <ul>
-                    <li>50 pontos.</li>
+                    <li>50 points</li>
                 </ul>
-
-                <h4>Dupla "2 faces com o mesmo número:"</h4>
+                <h4>Face 5:</h4>
                 <ul>
-                    <li>dupla de 1: 200 pontos</li>
-                    <li>dupla de 6: 100 pontos</li>
+                    <li>50 points</li>
                 </ul>
-                <h4>Trinca "3 faces com o mesmo número":</h4>
+                <h4>Face 4:</h4>
                 <ul>
-                    <li>trinca de 1: 1000 pontos.</li>
-                    <li>trinca de 2: 200 pontos.</li>
-                    <li>trinca de 3: 300 pontos.</li>
-                    <li>trinca de 4: 400 pontos.</li>
-                    <li>trinca de 5: 500 pontos.</li>
-                    <li>trinca de 6: 600 pontos.</li>
+                    <li>40 points</li>
                 </ul>
-                <h4>Quadra "4 faces com o mesmo número":</h4>
+                <h4>Face 3:</h4>
                 <ul>
-                    <li>Quadra de 1: 1500 pontos.</li>
-                    <li>Quadra de 2: 300 pontos.</li>
-                    <li>Quadra de 3: 400 pontos.</li>
-                    <li>Quadra de 4: 500 pontos.</li>
-                    <li>Quadra de 5: 600 pontos.</li>
-                    <li>Quadra de 6: 700 pontos.</li>
+                    <li>30 points</li>
                 </ul>
-                <h4>Quina "5 faces com o mesmo número":</h4>
+                <h4>Face 2:</h4>
                 <ul>
-                    <li>Quina de 1: 2000 pontos.</li>
-                    <li>Quina de 2: 400 pontos.</li>
-                    <li>Quina de 3: 500 pontos.</li>
-                    <li>Quina de 4: 600 pontos.</li>
-                    <li>Quina de 5: 700 pontos.</li>
-                    <li>Quina de 6: 800 pontos.</li>
+                    <li>20 points</li>
                 </ul>
-                <h4>Sena "6 faces com o mesmo número":</h4>
-                <ul>
-                    <li>Sena de 1: 2500 pontos.</li>
-                    <li>Sena de 2: 500 pontos.</li>
-                    <li>Sena de 3: 600 pontos.</li>
-                    <li>Sena de 4: 700 pontos.</li>
-                    <li>Sena de 5: 800 pontos.</li>
-                    <li>Sena de 6: 900 pontos.</li>
-                </ul>
-                <h4>
-                    Sequência alta "cada dado precisa ter o número distintos um do outro exemplo: 1-2-3-4-5-6
-                </h4>
-                <li>3000 pontos.</li>
-                <h4>Fim da Partida:</h4>
-                <p>Quando o Primeiro Jogador atingir o total de 20000 pontos.!</p>
+                <h4>E nd of game</h4>
+                <p>When the First Player reaches the total of 5000 points.!</p>
             </ul>
         </div>
     </menu>
-    <footer></footer>
+    <footer>
+        <img src="./assets/images/image_tag_footer.jpg" class="tag_footer" />
+    </footer>
 </body>
 
 </html>
