--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
         <h1 class="title_header">Ironhack Dice Games</h1>
     </header>
     <main>
-        <div>
+        <div class="show">
             <div><a href="./rules.html" class="rulesPosition">Rules</a></div>
             <div class="textScore">Score</div>
             <div class="textPlayer1">
