--- a/home.html
+++ b/home.html
@@ -15,10 +15,10 @@
         <h1 class="title_header">Ironhack Dice Games</h1>
     </header>
     <main>
-        <div id="newDiv"></div>
-        <div class="show">
+        <div class="hidden" id="endGame"></div>
+        <div class="show" id="newDiv">
             <div><a href="./rules.html" class="rulesPosition">Rules</a></div>
-            <div id="newDiv"></div>
+
             <div class="textScore">Score</div>
             <div class="textPlayer1">
                 P 0 :
