--- a/rules.html
+++ b/rules.html
@@ -15,7 +15,7 @@
     </header>
     <menu>
         <nav>
-            <a href="./home.html">Play</a>
+            <a href="./index.html">Play</a>
         </nav>
         <div>
             <ul>
